tests/snapshots/delete_operations_test__d_percent_nested_parens.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
fun[c]
