tests/snapshots/delete_operations_test__d_percent_no_match.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[n]o brackets here
