tests/snapshots/delete_operations_test__dd_last_line.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
line 1
[l]ine 2
