tests/snapshots/delete_operations_test__delete_last_char_multiline.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:3
Lines: 2

Buffer:
hello
wor[l]
